# ros-myo-bridge

./: CMakeLists.txt  README.md  package.xml
python/: classification_realtime.py  wheelchair_command.py
python/emg-data/: formal-6.pkl  formal-9.pkl  formal.pkl  formal2.pkl  formal_6x3.pkl  test1.pkl
