<?xml version="1.0"?>
<package format="2">

  <name>mmiyo</name>
  <version>0.0.1</version>
  <description>The MMIyo package</description>
  <maintainer email="mstiller@ggc.edu">Matthew Stiller</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
